tests/macros/editor/choices.rs
fn main() {
    requestty::questions![Editor { choices: todo!() }];
}
